	- Added indicator to show LSP status.
	- Added "Go to previous/next tab" menu.
	- Remove some useless toolbar icons.
	- Improved handling of appearance settings.
	- ProjectBrowser: added handling of DEL key to delete files.
	- Improve confusing alert name when creating a new branch.
	- Editor status bar: use a fixed font.
	- Read and use build target name when using Haiku standard makefile.
	- Avoid converting end lines when opening files.
	- Fixed crash in some edge cases.
	- Fixed layout issues caused by Scintilla view.
	- Fixed concurrency issue which could cause settings corruption.
	- Fixed race-condition between applying an edit and the list of quickfixes and links.
	- Fixed quickfix codeActions for multiple lines.
	- Fixed random hang when running/debugging applications from Genio.
	- Fixed selecting collapsed items in Config window.
	- Fixed ReplaceFindPrevious/Next for real.
	- Fixed ProjectBrowser losing focus after renaming a file.
	- Fixed wheel events not targetting the correct editor in certain cases.
	- Fixed glitches if switching active projects while building (by disabling switching project while building).
	- Fixed wrap_console setting not applying live.
	- Fixed build and missing resources when building Genio with Clang.
	- Fixed possible memory corruption issues in git clone code path.
	- Fixed some small memory leaks.
	- Removed "Default" button in project settings.
	- Various UI improvements.
---
v3.1
	- Fixed crash when hovering over Git Switch to branch menu without an active project.
	- Fixed FindAndReplacePrevious/Next corner cases.
	- Fixed tooltip showing spuriously on Outline view in certain cases.
	- Fixed small memory leak when creating projects from template.
	- Allows reading templates and other data from B_SYSTEM_DATA_DIRECTORY.
---
v3.0
	- Added new function to rename symbols automatically across a project.
	- Added autogenerated class outline with shiny icons adapting to system colors.